--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>net.trajano.maven.skins</groupId>
             <artifactId>twentyfourteen-maven-skin</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -109,24 +109,6 @@
                 <plugin>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
                     <version>2.7</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>net.trajano.maven.doxia</groupId>
-                            <artifactId>doxia-integration-tools</artifactId>
-                            <version>2.0.1-SNAPSHOT</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.apache.maven.doxia</groupId>
-                            <artifactId>doxia-integration-tools</artifactId>
-                            <version>1.5</version>
-                            <exclusions>
-                                <exclusion>
-                                    <groupId>org.apache.maven.doxia</groupId>
-                                    <artifactId>doxia-integration-tools</artifactId>
-                                </exclusion>
-                            </exclusions>
-                        </dependency>
-                    </dependencies>
                     <configuration>
                         <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
                         <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
@@ -140,16 +122,6 @@
                     <artifactId>maven-site-plugin</artifactId>
                     <version>3.3</version>
                     <dependencies>
-                        <dependency>
-                            <groupId>net.trajano.maven.doxia</groupId>
-                            <artifactId>doxia-integration-tools</artifactId>
-                            <version>2.0.1-SNAPSHOT</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>net.trajano.wagon</groupId>
-                            <artifactId>wagon-git</artifactId>
-                            <version>2.0.0</version>
-                        </dependency>
                         <dependency>
                             <groupId>org.apache.maven.doxia</groupId>
                             <artifactId>doxia-module-markdown</artifactId>
@@ -165,7 +137,7 @@
                 <plugin>
                     <groupId>net.trajano.mojo</groupId>
                     <artifactId>cleanpom-maven-plugin</artifactId>
-                    <version>1.0.2-SNAPSHOT</version>
+                    <version>1.0.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -222,11 +194,40 @@
                 </executions>
             </plugin>
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>net.trajano.wagon</groupId>
+                <artifactId>wagon-git</artifactId>
+                <version>2.0.1</version>
+            </extension>
+        </extensions>
     </build>
     <reporting>
         <plugins>
             <plugin>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>cim</report>
+                            <report>dependencies</report>
+                            <report>dependency-convergence</report>
+                            <report>dependency-info</report>
+                            <report>dependency-management</report>
+                            <report>distribution-management</report>
+                            <report>help</report>
+                            <report>issue-tracking</report>
+                            <report>license</report>
+                            <report>mailing-list</report>
+                            <report>modules</report>
+                            <report>plugin-management</report>
+                            <report>plugins</report>
+                            <report>project-team</report>
+                            <report>scm</report>
+                            <report>summary</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
