--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
         <dependency>
             <groupId>net.trajano.maven.skins</groupId>
             <artifactId>twentyfourteen-maven-skin</artifactId>
-            <version>1.0.2</version>
+            <version>1.0.3</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -147,6 +147,26 @@
                     <version>2.10.1</version>
                 </plugin>
                 <plugin>
+                    <artifactId>maven-linkcheck-plugin</artifactId>
+                    <version>1.2</version>
+                    <configuration>
+                        <excludedPages>
+                            <excludedPage>plugin-management.html</excludedPage>
+                            <excludedPage>plugins.html</excludedPage>
+                        </excludedPages>
+                        <excludedLinks>
+                            <excludedLink>../*/</excludedLink>
+                            <excludedLink>./images/*</excludedLink>
+                            <excludedLink>images/*</excludedLink>
+                            <excludedLink>http://i.trajano.net/**</excludedLink>
+                            <excludedLink>https://i.trajano.net/**</excludedLink>
+                            <excludedLink>https://oss.sonatype.org/service/local/staging/deploy/maven2/</excludedLink>
+                            <excludedLink>https://drone.io/</excludedLink>
+                            <excludedLink>http://search.maven.org/</excludedLink>
+                        </excludedLinks>
+                    </configuration>
+                </plugin>
+                <plugin>
                     <artifactId>maven-pmd-plugin</artifactId>
                     <version>3.4</version>
                     <dependencies>
@@ -162,7 +182,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>2.7</version>
+                    <version>2.8</version>
                     <configuration>
                         <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
                         <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
@@ -288,6 +308,9 @@
     </build>
     <reporting>
         <plugins>
+            <plugin>
+                <artifactId>maven-linkcheck-plugin</artifactId>
+            </plugin>
             <plugin>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <reportSets>
