--- a/pom.xml
+++ b/pom.xml
@@ -150,10 +150,6 @@
                     <artifactId>maven-linkcheck-plugin</artifactId>
                     <version>1.2</version>
                     <configuration>
-                        <excludedPages>
-                            <excludedPage>plugin-management.html</excludedPage>
-                            <excludedPage>plugins.html</excludedPage>
-                        </excludedPages>
                         <excludedLinks>
                             <excludedLink>../*/</excludedLink>
                             <excludedLink>./images/*</excludedLink>
@@ -161,6 +157,7 @@
                             <excludedLink>http://i.trajano.net/**</excludedLink>
                             <excludedLink>https://i.trajano.net/**</excludedLink>
                             <excludedLink>https://oss.sonatype.org/service/local/staging/deploy/maven2/</excludedLink>
+                            <excludedLink>http://www.sonatype.com/public-parent/nexus-maven-plugins/nexus-staging/nexus-staging-maven-plugin/</excludedLink>
                             <excludedLink>https://drone.io/</excludedLink>
                             <excludedLink>http://search.maven.org/</excludedLink>
                         </excludedLinks>
@@ -230,12 +227,12 @@
                 <plugin>
                     <groupId>net.trajano.mojo</groupId>
                     <artifactId>cleanpom-maven-plugin</artifactId>
-                    <version>1.0.4</version>
+                    <version>1.0.5-SNAPSHOT</version>
                 </plugin>
                 <plugin>
                     <groupId>net.trajano.mojo</groupId>
                     <artifactId>m2e-codestyle-maven-plugin</artifactId>
-                    <version>1.1.0</version>
+                    <version>1.1.1-SNAPSHOT</version>
                     <dependencies>
                         <dependency>
                             <groupId>net.trajano</groupId>
